// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableSection> when has multiple children renders the expected component 1`] = `
<div
  style={
    Object {
      "height": "800px",
      "overflow": "scroll",
    }
  }
>
  <div>
    Hello
  </div>
  <div>
    World
  </div>
</div>
`;

exports[`<ScrollableSection> when has no children renders the expected component 1`] = `
<div
  style={
    Object {
      "height": "800px",
      "overflow": "scroll",
    }
  }
/>
`;

exports[`<ScrollableSection> when has one child renders the expected component 1`] = `
<div
  style={
    Object {
      "height": "800px",
      "overflow": "scroll",
    }
  }
>
  <div>
    Hello
  </div>
</div>
`;
